[metadata]
name = tplbuild
version = 0.1.0
author = Mark Gordon
author_email = msg555@gmail.com
description = Templated container build tool
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/msg555/tplbuild/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages =
    tplbuild
python_requires = >=3.7
include-package-data = True

[options.package_data]
dustmaker = py.typed
